syntax = "proto3";

package pb;

option go_package = "booking-service/proto/pb";

service BookingService {
  rpc UpdateBookingStatus(UpdateBookingStatusRequest) returns (UpdateBookingStatusResponse);
}

message UpdateBookingStatusRequest {
  string booking_id = 1;
  string status = 2;
}

message UpdateBookingStatusResponse {
  bool success = 1;
  string message = 2;
}